# MECH3895_project

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  TODO.md
gazebo_geometries_plugin/: CMakeLists.txt  README.md  package.xml
gazebo_geometries_plugin/include/gazebo_geometries_plugin/: geometries_plugin.h
gazebo_geometries_plugin/src/: geometries_plugin.cpp
gazebo_geometries_plugin/srv/: geometry.srv
gazebo_scene_randomiser_plugin/: CMakeLists.txt  README.md  package.xml
gazebo_scene_randomiser_plugin/include/gazebo_scene_randomiser_plugin/: scene_randomiser_plugin.h
gazebo_scene_randomiser_plugin/src/: scene_randomiser_plugin.cpp
gazebo_scene_randomiser_plugin/srv/: randomise.srv
geometries_visualiser/: CMakeLists.txt  package.xml
geometries_visualiser/include/geometries_visualiser/: geometries_visualiser.h
geometries_visualiser/launch/: visualiser.launch
geometries_visualiser/src/: geometries_visualiser.cpp  visualiser_node.cpp
kinova_control/config/: j2n6s300_control.yaml  j2n7s300_control.yaml  j2s6s300_control.yaml  j2s7s300_control.yaml
kinova_control/launch/: kinova_control.launch
kinova_description/urdf/: j2s7s300.xacro  j2s7s300_standalone.xacro  kinova.gazebo  kinova_common.xacro  kinova_finger_friction.xacro  kinova_finger_set.xacro
kinova_gazebo/launch/: robot_launch.launch
kinova_gazebo/params/: gazebo_params.yaml
kinova_gazebo/plugin/: graspFix.urdf.xacro
kinova_gazebo/rviz/: j2n6s300.rviz  j2s6s300.rviz  j2s7s300.rviz
kinova_gazebo/worlds/: kinova_cabinet.world  kinova_shelf.world  kinova_table.world  kinova_tableV1.world  kinova_tableV3.world
planner/: CMakeLists.txt  package.xml
planner/include/planner/: controller.h  defines.h  manipulator.h  planner.h  state_validity.h  timer.h  util.h
planner/launch/: gazebo.launch  planner.launch  simple_traj.launch  tester.launch
planner/params/: params.yaml
planner/paths/: plot.sh
planner/rviz/: j2n6s300.rviz  j2s6s300.rviz  j2s7s300.rviz  kinova.rviz
planner/src/: controller.cpp  manipulator.cpp  node.cpp  planner.cpp  simple_traj_node.cpp  state_validity.cpp  timer.cpp  util.cpp
planner/src/paths/: plot_path.py
planner/srv/: start_plan.srv
planner/test/: data_processor.cpp  plot_plan_times.sh  process_logs.sh  tester.cpp
planner/worlds/: kinova_shelf.world  kinova_tableV1.world  kinova_tableV2.world  optimal_test.world
planner_proj/: CMakeLists.txt  package.xml
