<?xml version="1.0"?>
<package format="2">
  <name>gazebo_scene_randomiser_plugin</name>
  <version>0.0.0</version>
  <description>The gazebo_scene_randomiser_plugin package</description>

  <maintainer email="mustafa.motawei@gmail.com">Moustafa Motawei</maintainer>

  <license>BSD</license>

  <author email="mustafa.motawei@gmail.com">Moustafa Motawei</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib"   gazebo_media_path="${prefix}" />

  </export>
</package>
