<?xml version="1.0"?>
<package format="2">
  <name>geometries_visualiser</name>
  <version>0.0.0</version>
  <description>The geometries_visualiser package</description>

  <maintainer email="el17m3m@leeds.ac.uk">Moustafa</maintainer>


  <license>TODO</license>

 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_geometries_plugin</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_geometries_plugin</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>gazebo_geometries_plugin</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
