<?xml version="1.0"?>
<package format="2">
  <name>planner_proj</name>
  <version>0.0.0</version>
  <description>The planner_proj package</description>

  <maintainer email="mustafa.motawei@gmail.com">Moustafa Motawei</maintainer>

  <license>BSD</license>

  <author email="mustafa.motawei@gmail.com">Moustafa Motawei</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>kinova_control</exec_depend>
  <exec_depend>kinova_description</exec_depend>
  <exec_depend>kinova_gazebo</exec_depend>
  <exec_depend>gazebo_grasp_plugin</exec_depend>
  <exec_depend>gazebo_geometries_plugin</exec_depend>
  <exec_depend>planner</exec_depend>


  <export>
    <metapackage/>
  </export>
</package>